[gd_scene load_steps=8 format=2]

[ext_resource path="res://actors/GameOverOverlay/GameOverOverlay.gd" type="Script" id=1]
[ext_resource path="res://fonts/m5x7.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://sounds/lose.ogg" type="AudioStream" id=3]

[sub_resource type="DynamicFont" id=1]
size = 48
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
size = 24
font_data = ExtResource( 2 )

[sub_resource type="Animation" id=3]
resource_name = "fade_in"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("Label:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.6, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ColorRect:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.65 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("ScoreLabel:self_modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.6, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("InstructionsLabel:self_modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 1.5, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "idle"
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Label:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[node name="GameOverOverlay" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
self_modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )

[node name="Label" type="Label" parent="."]
self_modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 1.0
margin_bottom = -134.0
custom_fonts/font = SubResource( 1 )
text = "- Game over -"
align = 1
valign = 2

[node name="ScoreLabel" type="Label" parent="."]
self_modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 135.0
custom_fonts/font = SubResource( 1 )
text = "Your score: 000"
align = 1

[node name="InstructionsLabel" type="Label" parent="."]
self_modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 221.0
margin_bottom = -19.0
custom_fonts/font = SubResource( 4 )
text = "- Press any key to restart -"
align = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/fade_in = SubResource( 3 )
anims/idle = SubResource( 2 )

[node name="GameOverAudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[node name="CanRestartTimer" type="Timer" parent="."]

[connection signal="timeout" from="CanRestartTimer" to="." method="_on_CanRestartTimer_timeout"]
